Fixed Image Scaling on Mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -176,6 +176,10 @@ aside section ul {
   .collumned {
     display: block;
   }
+
+  .centered img {
+    width: 100%;
+  }
 }
 
 /* Selectors */
